<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/employed_logo_image_view"
        android:layout_width="142dp"
        android:layout_height="97dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/employed_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/employed_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/employed_name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014" />

    <TextView
        android:id="@+id/employed_surnames_text_views"
        android:layout_width="111dp"
        android:layout_height="29dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/employed_surnames"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/personal_data"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/latest_studies_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest_studies_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/latest_studies_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest_studies_label"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/latest_job_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest_job_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/latest_job_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest_job_label"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_data"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textSize="17sp" />


        <TextView
            android:id="@+id/movil_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movil_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/movil_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movil_label"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/address_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_label"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employed_data"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/job_position_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_position_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/job_position_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_position_label"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/departament_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/departament_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/department_label"
            android:textSize="17sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>